<resources>
    <string name="app_name">Visita San Marcos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion1">Comparte tus experiencias con otros usuarios</string>
    <string name="descripcion2">Envianos tus sugerencias para mejorar la app</string>
    <string name="descripcion3">Revisa mas de la historia de la universidad</string>
    <string name="descripcion5">Escanea los codigos QR en los principales puntos de la universidad</string>
    <string name="iniciarSesionPantalla">INICIAR SESION</string>
    <string name="registrarPantalla">REGISTRAR</string>
    <string name="btn_iniciar_sesion">INICIAR SESION</string>
    <string name="btn_registrarse_sesion">REGISTRAR</string>
    <string name="btn_restablecer_contrasena">RESTABLECER CONTRASEÑA</string>
    <string name="btn_olvide_mi_contraseña">OLVIDE MI CONTRASEÑA</string>
    <string name="correoText">Correo</string>
    <string name="contrasenaText">Contraseña</string>
    <string name="confirmarContrasenaText">Confirmacion de contraseña</string>
    <string name="hint_user">Correo: ejemplo@gmail.com</string>
    <string name="olvide_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="logocontent">logo del login</string>
    <string name="Registrate_text">¿No tienes cuenta? Registrate</string>
    <string name="CerrarSesion_text">Salir</string>
    <string name="TituloFISI">Facultad de Ingenieria de Sistemas e Informatica</string>
    <string name="TituloEstadio">Estadio Unmsm</string>
    <string name="cuerpoEstadio">" *Fecha de fundación: 13 de Mayo de 1951(Conmemorando  los 400 años de fundación de la UNMSM). \n *  Ubicación: Jr. Amézaga s/n  con la Av. Venezuela s/n, en la ciudad de Lima, Perú. *Dimensiones: 105 x 70 m. \n *  Capacidad: 32000 espectadores. \n *  Es el primer estadio de gran capacidad en el Perú,en \n el año de su fundación fue escenario de los juegos Olímpicos Especiales.
        \n El estadio fue sede anfitrión de diversos eventos deportivos. \n -Juegos deportivos universitarios nacionales (edición especial, 1951). \n -Juegos deportivos universitarios nacionales (V edición, 1955).    \n-Campeonato Sudamericano de Fútbol Sub-17 de 2019. \n -Juegos Panamericanos de 2019."</string>
    <string name="TituloBiblio">Bilioteca Pedro Zulen</string>
    <string name="cuerpoBiblio">"  *Fecha de fundación: Diciembre de 1999 \n   *Ubicación: Plaza Cívica del campus universitario de la UNMSM \n   *Superficie: 19.800 m^2
    \n   *Capacidad: 2500 personas \n   Es la biblioteca universitaria más grande del Perú y una de las más grandes de América Latina, está constituida de cuatro
    edificios unidos entre sí, tiene 5 niveles, cuenta con un escenario multifuncional, conexión a Internet, sistemas de videoconferencia, proyectores multimedia, radio enlaces y equipos de audio y sonido profesional. \n\n   La biblioteca tiene como visión convertirse en un centro de información y modelo de biblioteca universitaria que brinde
    servicios de información innovadores a los usuarios internos y externos.Para ello, tiene como misión el ser un centro de recursos de información y difusión del conocimiento científico, tecnológico y humanístico que contribuya en la formación académico profesional y la investigación"</string>
    <string name="CuerpoFisi">"   Fundación: 1996 como escuela / 2000 como facultad \n     Ubicación: Ciudad universitaria de la Universidad de San Marcos
    \n Misión: Generar y difundir conocimiento científico, tecnológico y humanístico, formando profesionales e investigadores lideres, con valores y respetuosos de la diversidad
	cultural.
    \n Visión: Ser una facultad referente de excelencia y calidad en la formación profesional e investigación en las ingenierías de Sistemas, de software y de ciencia de la
	computación, reconocida nacional e internacionalmente."</string>
    <string name="TituloClinica">Clinica Universitaria</string>
    <string name="titulo_ilustres">San marquinos ilustres</string>
    <string name="vargas_llosa">Mario Vargas LLosa</string>
    <string name="texto_llosa">Nació en la Ciudad Blanca de Arequipa el 28 de mayo de 1936, Estudió en el colegio militar Leoncio Prado de Lima. Al terminar la secundaria, decidió estudiar Letras y Derecho en Lima.\nIngresó a la Universidad Nacional Mayor de San Marcos en 1953, para seguir estudios de Literatura. A fines de la década del 50 fue considerado el alumno sanmarquino más distinguido de Literatura por lo cual obtuvo una beca para seguir cursos de postgrado en España.
\nA lo largo de su carrera ha recibido innumerables premios y distinciones, entre ellos el Nobel de Literatura (2010) y los dos máximos galardones que se conceden en el ámbito de las letras hispánicas: el Rómulo Gallegos 1967, por su novela La casa verde y el Cervantes (1994). \n Se trata, pues, de uno de los escritores peruanos y sanmarquinos de mayor prestigio y renombre en el mundo.</string>
    <string name="maria_arguedas">Jose Maria Arguedas</string>
    <string name="texto_arguedas">Nació en Andahuaylas, en 1911. Al terminar sus estudios secundarios, se matriculó en la Universidad Nacional Mayor de San Marcos para estudiar Literatura. \n Arguedas es considerado uno de los más destacados escritores peruanos, ocupación literaria que la compartió con sus cargos de funcionario público y maestro. Trabajó varios años en el Museo Nacional y llegó a ser director de la Casa de la Cultura. Su vocación de maestro le permitió dictar cátedra en las universidades de San Marcos y La Agraria.
    \n Arguedas se suicidó de un disparo de pistola cuando era profesor de la Universidad Agraria, el 28 de noviembre de 1969</string>
    <string name="luis_lumbreras">Luis Guillermo Lumbreras</string>
    <string name="texto_lumbreras">Nacido en Ayacucho en 1936, obtuvo su Doctorado en la Universidad Nacional Mayor de San Marcos. En 1963 retornó a su tierra natal como catedrático de la Universidad San Cristóbal de Huamanga donde fundó la primera Facultad de Ciencias Sociales en el país. \n
    Luis Guillermo Lumbreras es reconocido como uno de los arqueólogos más brillantes de Latinoamérica porque impregnó una nueva perspectiva a la arqueología con valiosos aportes, no sólo en el aspecto descriptivo y analítico sino también en el plano teórico de la definición de la arqueología peruana.  \n Ha recibido muchos premios, entre ellos el Premio Nacional de Cultura (1970) y el Premio Humboldt de Investigación Científica del mismo año.</string>
    <string name="daniel_alcides">Daniel Alcides Carrion</string>
    <string name="texto_carrion">Nació en Cerro de Pasco.Fue admitido en la facultad de medicina en 1880, un año después de terminada la guerra con Chile, en una época muy difícil para el país. \n La prestigiosa Academia Peruana organizó un concurso para premiar a quien pudiera demostrar la causa de la Verruga Peruana. Esta enfermedad es causada por un germen que sólo ataca a los humanos (Bartonella bacilliformis). Era, y aún lo es, una de esas situaciones en las que la experimentación tiene que utilizar a seres humanos por lo que Carrión usó su propio cuerpo.
    \n Con este acto se convirtió también en precursor de la nueva bioética, esa que señala que cuando es indispensable ese tipo de experimentación, el primero que debe ir por delante es, precisamente, el investigador. \n Murió el 5 de octubre de 1885, como consecuencia de la inoculación del germen (Bartonella bacilliformis) que causa, la entonces llamada Fiebre de la Oroya.</string>
    <string name="jorge_basadre">Jorge Basadre</string>
    <string name="texto_basadre">Nació el 12 de febrero de 1903 en Tacna. En Lima, estudió en el colegio alemán Deutsche Schule y el último año de secundaria en el tradicional Colegio de Nuestra Señora de Guadalupe. Ingresó a la Universidad Nacional Mayor de San Marcos en 1919, donde obtuvo los grados de Doctor en Letras, en Jurisprudencia y el título de Abogado. \n Ocupó el cargo de director de Asuntos Culturales de la Unión Panamericana (1948- 1950), fue también ministro de Educación en 1945, en 1950, conformó una comisión auspiciada por la UNESCO, para escribir una historia de la humanidad.
    \n En 1964, publicó otra monumental obra titulada "Historia de la República", la cual ha sido considerada la obra más relevante de la historiografía de nuestro siglo. Jorge Basadre murió el 29 de junio de 1980.</string>
    <string name="titulo_sedes">Sedes de la UNMSM</string>
    <string name="ciudad_universitaria">Ciudad Universitaria</string>
    <string name="texto_ciudad">La reconocida Ciudad Universitaria fue creada en la década de los años sesenta convirtiéndose en uno de los campus universitarios más reconocidos del país donde convergen la identidad y la historia. Sus edificaciones dan cuenta de la diversidad académica que ofrece la Decana de América y donde conviven estudiantes, docentes y personal administrativo de las facultades correspondientes a las cinco áreas académicas que la constituyen. En este espacio se han formado muchas de las figuras más notables del arte, ciencia y política del Perú, y de sus aulas han egresado destacados estudiosos que resaltan a nivel nacional e internacional.</string>
    <string name="san_fernando">Facultad de Medicina - San Fernando</string>
    <string name="texto_san_fernando">La decana de las facultades de medicina a nivel nacional recoge en su historia la gesta de la medicina peruana desde su creación y es la cuna de distinguidas personalidades de las ciencias médicas y maestros ilustres que han contribuido notablemente al avance del conocimiento científico, como el mártir de la medicina peruana Daniel Alcides Carrión. Fue creada con el nombre actual en 1856 bajo el gobierno del presidente constitucional Ramón Castilla y tuvo al ilustre sanmarquino Cayetano Heredia como su primer decano</string>
    <string name="medicina_veterinaria">Facultad de Medicina Veterinaria - Circunvalacion</string>
    <string name="texto_medicina_veterinaria">Fundada en 1946 la Facultad de Medicina Veterinaria ha estado comprometida con el desarrollo de la investigación en campo de las Ciencias de la Salud y ha contribuido a la formación profesional integral de médicos veterinarios en todo el país siendo un referente nacional de calidad. Cuenta desde el año 1956 con una sede propia desde donde se ofrecen, además de diversos programas de estudio, servicios clínicos de animales menores y mayores hacia la comunidad a cargo de médicos capacitados en diferentes especialidades</string>
    <string name="lurigancho">E.A.P de Ingenieria Agroindustrial - San juan de Lurigancho</string>
    <string name="texto_ing_agro">Perteneciente a la Facultad de Química e Ingeniería Química, la escuela fue fundada en el año 2008 en el distrito más poblado de nuestro país, como parte de la política de descentralización de la UNMSM. Se ha constituido con el propósito de cooperar en el desarrollo agroindustrial nacional a través de la formación integral de profesionales competentes con responsabilidad social involucrados en la investigación científica para contribuir al desarrollo del país y de una de sus principales fuentes de recursos como la agricultura.</string>
    <string name="titulo_auto">Autoridades de la UNMSM</string>
    <string name="auto1">Rectora.- Dra. Jeri Gloria Ramón Ruffner de Vega </string>
    <string name="auto2">Vicerrector academico de pregrado.- Dr. Carlos Francisco Cabrera Carranza </string>
    <string name="auto3">Vicerrector academico de posgrado.- Dr. José Segundo Niño Montero </string>
</resources>