<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sedes_activity">

    <ScrollView
        android:id="@+id/scroll_sedes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_sedes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/titulo_sedes"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titulo_sedes1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ciudad_universitaria"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ciuni"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/ciudad_universitaria_sede"></ImageView>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/cuerpo_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/texto_ciudad"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"></me.biubiubiu.justifytext.library.JustifyTextView>

            <TextView
                android:id="@+id/titulo_sedes2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/san_fernando"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/sanfernando"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/san_fernando_sede"></ImageView>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/cuerpo_sanfernando"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/texto_san_fernando"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"></me.biubiubiu.justifytext.library.JustifyTextView>

            <TextView
                android:id="@+id/titulo_sedes3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/medicina_veterinaria"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/circunvalacion"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/medicina_universitaria_sede"></ImageView>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/cuerpo_veterinaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/texto_medicina_veterinaria"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"></me.biubiubiu.justifytext.library.JustifyTextView>

            <TextView
                android:id="@+id/titulo_sedes4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/lurigancho"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/san_lurigancho"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/agro_industrial_sede"></ImageView>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/cuerpo_agroindustrial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/texto_ing_agro"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"></me.biubiubiu.justifytext.library.JustifyTextView>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>