<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".autoridadesActivity">

    <TextView
        android:id="@+id/titulo_autoridades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/titulo_auto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_ilustres"
        android:layout_width="418dp"
        android:layout_height="586dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_autoridades"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_auto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto1"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <ImageView
                android:id="@+id/rectora_imagen"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/rectora"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp">

            </ImageView>

            <TextView
                android:id="@+id/titulo_auto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto2"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <ImageView
                android:id="@+id/rectorpre_imagen"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/pregradorector"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp">
            </ImageView>


            <TextView
                android:id="@+id/titulo_auto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto3"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <ImageView
                android:id="@+id/pos_imagen"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/posgradorector"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp">
            </ImageView>

            <Button
                android:id="@+id/boton_auto"
                android:layout_width="153dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="130dp"
                android:layout_marginBottom="20dp"
                android:background="#FF9800"
                android:text="Mas Informacion..."
                android:textStyle="bold">
            </Button>
        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>